--- a/bio_set_2020_02-03.md
+++ b/bio_set_2020_02-03.md
@@ -542,4 +542,29 @@ https://deepmind.com/research/open-source/computational-predictions-of-protein-s
 https://www.biorxiv.org/content/10.1101/2020.03.26.010322v1.full
 
 
+56、：
+https://www.biorxiv.org/content/10.1101/2020.03.26.994756v3.full
+
+57、：
+https://www.biorxiv.org/content/10.1101/2020.02.26.964882v3.full
+
+
+58、：
+https://www.biorxiv.org/content/10.1101/2020.03.25.006213v2.full
+
+
+
+http://www.datamonkey.org/slac
+
+
+
+59、：
+https://www.biorxiv.org/content/10.1101/2020.03.13.990036v2.full
+
+
+60、：
+https://www.biorxiv.org/content/10.1101/2020.03.13.991455v3.full
+
+
+www.humancellatlas.org/publications
 
